# claude-code-light

./: .gitignore  LICENSE  README.md  build-portable.bat  gen-tts.mjs  index.html  package-lock.json  package.json
src/: main.ts  tauri-api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/styles/: index.css
