[package]
name = "cc-traffic-light"
version = "1.3.2"
description = "CC 红绿灯"
authors = ["张顽心"]
edition = "2021"

[[bin]]
name = "cc-traffic-light"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rodio = { version = "0.20", default-features = false, features = ["symphonia-mp3"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
